--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'jacoco'
 
 group = 'com.java'
 version = '0.0.1-SNAPSHOT'
@@ -22,6 +23,14 @@ sourceCompatibility = 1.8
 repositories {
 	mavenCentral()
 	maven { url "https://repo.spring.io/milestone" }
+}
+
+jacocoTestReport {
+	group="reporting"
+	reports {
+		html.enabled = true
+		html.destination = "${buildDir}/reports/coverage"	
+	}
 }
 
 ext['springCloudVersion'] = 'Greenwich.RC2'
